@@ -8,11 +8,9 @@ DESTDIR         = ../plugins
 
 # install
 equals(LOCAL,1) {
-	message(Installing in ~/.KKEditQT/langplugins/cpplang)
 	target.path = ~/.KKEditQT/langplugins/cpplang
 }
 else {
-	message(Installing in /tmp/langplugins/cpplang)
 	target.path = /tmp/langplugins/cpplang
 }
 
