@@ -85,5 +85,13 @@
 				"italic":false,
 				"bold":true
 			}
+		],
+	"lanuageextra":
+		[
+			{
+				"colour":"#800000",
+				"italic":true,
+				"bold":true
+			}
 		]
 }
